Notifier: set the default value to "true"

BUG:443248
(cherry picked from commit 830d8e31eb53eafd164d13a6e7085d824005ce3d)